syntax = "proto2";

package forecast;

option go_package = "./forecast";

message Forecast {
  required int32 poll_id = 1;
  optional int32 referrer_forecasts_page = 2;
}