syntax = "proto2";

option go_package = "./votepreview";

message VotePreview {
  required int32 poll_id = 1;
  required int32 option_id = 2;
}